--- a/components/layout/header/sidebar/css/sideBar.scss
+++ b/components/layout/header/sidebar/css/sideBar.scss
@@ -1,5 +1,5 @@
-@use "/src/sass/global/variables" as var;
-@use "/src/sass/global/mixin" as fn;
+@use "sass/global/variables" as var;
+@use "sass/global/mixin" as fn;
 
 
 .container-aside {
