--- a/components/layout/nav/_nav.module.scss
+++ b/components/layout/nav/_nav.module.scss
@@ -1,5 +1,5 @@
-@use '/src/sass/global/variables' as var;
-@use '/src/sass/init/global/mixin' as fn;
+@use '/sass/global/variables' as var;
+@use '/sass/init/global/mixin' as fn;
 
 
 .header {
