--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -1,9 +1,7 @@
 $color-primary: #442897;
-$color-secondary: #ffac32;
+$color-secondary: #3d65fd;
 $color-tertiary: #f5e6ed;
 $color-quaternary: #1c1c1c;
-
-
 
 $font-family: "Nunito", sans-serif;
 $font-size: 16px;
