--- a/components/ui/btns/btn-row-circle/_btnRowCircle.scss
+++ b/components/ui/btns/btn-row-circle/_btnRowCircle.scss
@@ -12,10 +12,10 @@
                 border: 4px solid transparent;
                 border-radius: 50%;
                 content: "";
-                height: 24px;
+                height: 30px;
                 position: absolute;
                 transform: translate(-50%, -50%);
-                width: 24px;
+                width: 30px;
                 color: var.$color-secondary;
 
             }
@@ -51,19 +51,19 @@
         }
 
         25% {
-            border-color: transparent #63459b transparent transparent;
+            border-color: transparent var.$color-secondary transparent transparent;
         }
 
         50% {
-            border-color: transparent #63459b #63459b transparent;
+            border-color: transparent var.$color-secondary var.$color-secondary transparent;
         }
 
         75% {
-            border-color: transparent #63459b #63459b;
+            border-color: transparent var.$color-secondary var.$color-secondary;
         }
 
         to {
-            border-color: #63459b;
+            border-color: var.$color-secondary;
             transform: rotate(-700deg);
         }
     }
